<resources>
    <string name="app_name">Calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_div">/</string>
    <string name="key_mul">*</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>

    <string name="с">C</string>
    <string name="percent">%</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="equal">=</string>
    <string name="background_image">Background image</string>
    <string name="dark_mode">dark mode</string>
    <string name="set_dark">set dark</string>
    <string name="set_light">set light</string>

    <string name="settings">Settings</string>
    <string name="default_theme">default</string>
    <string name="select_theme_app">Select theme app</string>
    <string name="custom_theme">custom</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
</resources>