<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <RadioGroup
        android:id="@+id/select_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:text="@string/select_theme_app"/>

        <RadioButton
            android:id="@+id/theme_default_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_theme"/>

        <RadioButton
            android:id="@+id/theme_custom_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_theme"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_apply_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"/>

    <Button
        android:id="@+id/btn_cancel_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

</LinearLayout>